
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct tty_struct {scalar_t__ driver_data; } ;
struct TYPE_2__ {int tail; int head; } ;
struct e100_serial {TYPE_1__ xmit; } ;


 int CIRC_SPACE (int ,int ,int ) ;
 int SERIAL_XMIT_SIZE ;

__attribute__((used)) static int
rs_write_room(struct tty_struct *tty)
{
 struct e100_serial *info = (struct e100_serial *)tty->driver_data;

 return CIRC_SPACE(info->xmit.head, info->xmit.tail, SERIAL_XMIT_SIZE);
}
